<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="tk.talcharnes.unborify.PhotoCard.Comments.CommentFragment"
    tools:showIn="@layout/activity_comment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/comments_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:id="@+id/add_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/comment_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/submit_comment_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/fui_transparent"
            android:contentDescription="@string/description_submit_comment"
            android:src="@drawable/send_button" />
    </LinearLayout>

</RelativeLayout>
